--- a/themes/pacman/layout/_partial/post/gallery.ejs
+++ b/themes/pacman/layout/_partial/post/gallery.ejs
@@ -1,4 +1,4 @@
-<% if (item.photos && item.photos.length){ %>
+<% if (item.photos && item.photos.length > 1){ %>
 <div class="article-gallery">
   <div class="article-gallery-photos">
     <% item.photos.forEach(function(photo, i){ %>
