--- a/themes/pacman/source/css/_partial/article.styl
+++ b/themes/pacman/source/css/_partial/article.styl
@@ -116,6 +116,7 @@ article
       font-size font-size+5
       line-height line-height+0.2
       margin 0.7em 0
+      text-align center
       @media tablet
         margin 1.2em 0
     img,video,figure img
