--- a/themes/pacman/layout/_widget/links.ejs
+++ b/themes/pacman/layout/_widget/links.ejs
@@ -1,7 +1,6 @@
 <div class="linkslist">
   <p class="asidetitle"><%= __('links') %></p>
     <ul>
-      <li><a href="http://yangjian.me" target="_blank" title="YangJian">Alimon's Blog</a></li>
-      <li><a href="http://zespia.tw/hexo" target="_blank" title="Hexo">Hexo</a></li>
+      <li><a href="http://dafuhao5688.taobao.com/" target="_blank" title="YangJian">富豪女装</a></li>
     </ul>
 </div>
