--- a/themes/pacman/source/css/_partial/footer.styl
+++ b/themes/pacman/source/css/_partial/footer.styl
@@ -113,3 +113,13 @@ footer
     color color-white
     &:hover
       color color-blue
+
+/** 返回顶部CSS **/
+#gotop
+    position fixed
+    bottom 50px
+    right 15px
+    top auto
+    display block
+    cursor pointer
+    z-index 999
