--- a/themes/pacman/layout/_partial/head.ejs
+++ b/themes/pacman/layout/_partial/head.ejs
@@ -21,6 +21,10 @@
   %>
     <title><% if (title){ %><%= title %> | <% } %><%= config.title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="keywords" content="¹ÊÊÂ,Í¼Æ¬" />
+    
     <% if (config.author){ %>
     <meta name="author" content="<%= config.author %>"><% } %>
     <% if (page.description){ %>
