--- a/themes/pacman/layout/_partial/head.ejs
+++ b/themes/pacman/layout/_partial/head.ejs
@@ -23,7 +23,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="keywords" content="¹ÊÊÂ,Í¼Æ¬" />
+    <meta name="keywords" content="æ•…äº‹,å›¾ç‰‡" />
     
     <% if (config.author){ %>
     <meta name="author" content="<%= config.author %>"><% } %>
