--- a/themes/pacman/layout/_partial/after_footer.ejs
+++ b/themes/pacman/layout/_partial/after_footer.ejs
@@ -162,3 +162,8 @@ $(document).ready(function(){
 </script>
 <% } %>
 <%- partial('google_analytics') %>
+
+<script type="text/javascript">
+var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fa5b3c680a08778d7a9c2631836d51c3b' type='text/javascript'%3E%3C/script%3E"));
+</script>
