--- a/themes/pacman/layout/_widget/links.ejs
+++ b/themes/pacman/layout/_widget/links.ejs
@@ -1,6 +1,6 @@
 <div class="linkslist">
   <p class="asidetitle"><%= __('links') %></p>
     <ul>
-      <li><a href="http://dafuhao5688.taobao.com/" target="_blank" title="YangJian">富豪女装</a></li>
+      <li><a href="http://dafuhao5688.taobao.com/" target="_blank" title="">北京锦绣大地批发</a></li>
     </ul>
 </div>
